--- a/week_3/calculators/index.html
+++ b/week_3/calculators/index.html
@@ -45,15 +45,15 @@
     <form>
         <div class="form_group">
         <label for="celsius">Celsius</label>
-        <input type="number" id="celsius" onchange="tempConv(this.id)" oninput="tempConv(this.id)">
+        <input type="number" id="celsius" onchange="tempConv(this.id)" oninput="tempConv(this.id)" placeholder="Celsius">
         </div>
         <div class="form_group">
         <label for="fahrenheit">Fahrenheit</label>
-        <input type="number" id="fahrenheit" onchange="tempConv(this.id)" oninput="tempConv(this.id)">
+        <input type="number" id="fahrenheit" onchange="tempConv(this.id)" oninput="tempConv(this.id)" placeholder="Fahrenheit">
         </div>
         <div class="form_group">
         <label for="kelvin">Kelvin</label>
-            <input type="number" id="kelvin" onchange="tempConv(this.id)" oninput="tempConv(this.id)">
+            <input type="number" id="kelvin" onchange="tempConv(this.id)" oninput="tempConv(this.id)" placeholder="Kelvin">
         </div>
     </form>
 
