--- a/week_3/pizza_task/index.html
+++ b/week_3/pizza_task/index.html
@@ -34,44 +34,44 @@
     <div>
         <h2>Toppings</h2>
         <div>
-        <label for="toppings">Pepperoni</label>
-        <input type="checkbox" id="toppings">
+        <label for="pepperoni">Pepperoni</label>
+        <input type="checkbox" name="topping" id="pepperoni">
         </div>
         <div>
-        <label for="toppings">Mushroom</label>
-        <input type="checkbox" id="toppings">
+        <label for="mushroom">Mushroom</label>
+        <input type="checkbox" name="topping" id="mushroom">
         </div>
         <div>
-        <label for="toppings">Extra cheeese</label>
-        <input type="checkbox" id="toppings">
+        <label for="cheese">Extra cheeese</label>
+        <input type="checkbox" name="topping" id="cheese">
         </div>
         <div>
-        <label for="toppings">Ham</label>
-        <input type="checkbox" id="toppings">
+        <label for="ham">Ham</label>
+        <input type="checkbox" name="topping" id="ham">
         </div>
         <div>
-        <label for="toppings">Onion</label>
-        <input type="checkbox" id="toppings">
+        <label for="onion">Onion</label>
+        <input type="checkbox" name="topping" id="onion">
         </div>
         <div>
-        <label for="toppings">Bacon</label>
-        <input type="checkbox" id="toppings">
+        <label for="bacon">Bacon</label>
+        <input type="checkbox" name="topping" id="bacon">
         </div>
         <div>
-        <label for="toppings">Green pepper</label>
-        <input type="checkbox" id="toppings">
+        <label for="pepper">Green pepper</label>
+        <input type="checkbox" name="topping" id="pepper">
         </div>
         <div>
-        <label for="toppings">Black olives</label>
-        <input type="checkbox" id="toppings">
+        <label for="olives">Black olives</label>
+        <input type="checkbox" name="topping" id="olives">
         </div>
         <div>
-        <label for="toppings">Chicken</label>
-        <input type="checkbox" id="toppings">
+        <label for="chicken">Chicken</label>
+        <input type="checkbox" name="topping" id="chicken">
         </div>
         <div>
-        <label for="toppings">Kebab</label>
-        <input type="checkbox" id="toppings">
+        <label for="kebab">Kebab</label>
+        <input type="checkbox" name="topping" id="kebab">
         </div>
       <h2>Delivery</h2>
       <div>
@@ -85,7 +85,8 @@
     </div>
     </form>
     <h2>Summary</h2>
-    <p id="summary"></p>
+    <p id="totalPrice"></p>
+    <p id="selectedSize"></p>
     <script src="main.js"></script>
 </body>
 </html>
