--- a/week_3/pizza_task/index.html
+++ b/week_3/pizza_task/index.html
@@ -42,8 +42,8 @@
           <input type="checkbox" name="topping" id="pepperoni" />
         </div>
         <div>
-          <label for="mushroom">Mushroom</label>
-          <input type="checkbox" name="topping" id="mushroom" />
+          <label for="jalapeno">Jalapeno</label>
+          <input type="checkbox" name="topping" id="jalapeno" />
         </div>
         <div>
           <label for="extra cheese">Extra cheese</label>
