--- a/week_4/background_generator/index.html
+++ b/week_4/background_generator/index.html
@@ -12,9 +12,12 @@
   <form>
 <h1>BG generator</h1>
 <h2>Color</h2>
-
+<!-- <div class="colorButtons"> --> <!-- trying to make rounded color buttons -->
 <input type="color" id="color1" value="#224f00">
+<!-- </div>
+<div class="colorButtons"> -->
 <input type="color" id="color2" value="#ffffff">
+<!-- </div> -->
 <h2>Direction</h2>
 <div class="direction_grid">
 
