--- a/week_5/speed_game/index.html
+++ b/week_5/speed_game/index.html
@@ -2,33 +2,36 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Speed game</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nova+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <title>Speed game!!!</title>
 </head>
 
 <body>
-    <form>
-        <h1>SPEED GAME</h1>
-        <p>Score:<span id="scoreDisplay"></span></p>
-        <section id="circles">
-            <button class="circle" id="circle1">1</button>
-            <button class="circle" id="circle2">2</button>
-            <button class="circle" id="circle3">3</button>
-            <button class="circle" id="circle4">4</button>
+  <form>
+    <h1>SPEED GAME!</h1>
+    <p>Score:<span id="scoreDisplay"></span></p>
+    <section id="circles">
+      <button class="circle" id="circle1">1</button>
+      <button class="circle" id="circle2">2</button>
+      <button class="circle" id="circle3">3</button>
+      <button class="circle" id="circle4">4</button>
 
-        </section>
-        <div id="gameButtons">
-            <button class="btn primary" id="startButton">Start Game</button>
-            <button class="btn primary" id="endButton">End Game</button>
-        </div>
-        <div class="modal">
-            <p>Your score is: <span id="scoreDisplay">0</span></p>
-        </div>
-    </form>
-    <script src="main.js"></script>
+    </section>
+    <div id="gameButtons">
+      <button class="btn primary" id="startButton">Start Game</button>
+      <button class="btn primary" id="endButton">End Game</button>
+    </div>
+    <div class="modal">
+      <p>Your score was: <span id="scoreDisplay"></span></p>
+    </div>
+  </form>
+  <script src="main.js"></script>
 </body>
 
 </html>
