--- a/week_5/speed_game/index.html
+++ b/week_5/speed_game/index.html
@@ -17,10 +17,14 @@
     <h1>SPEED GAME!</h1>
     <p>Score:<span id="scoreDisplay"></span></p>
     <section id="circles">
-      <button class="circle" id="circle1">1</button>
-      <button class="circle" id="circle2">2</button>
+      <button class="circle" id="circle1"><p>1</p></button> 
+      <button class="circle" id="circle2"><p>2</p></button> 
+      <button class="circle" id="circle3"><p>3</p></button> 
+      <button class="circle" id="circle4"><p>4</p></button> 
+      
+     <!--  <button class="circle" id="circle2">2</button>
       <button class="circle" id="circle3">3</button>
-      <button class="circle" id="circle4">4</button>
+      <button class="circle" id="circle4">4</button> -->
 
     </section>
     <div id="gameButtons">
