getting_there_highlights_working

--- a/week_5/speed_game/index.html
+++ b/week_5/speed_game/index.html
@@ -28,7 +28,7 @@
       <button class="btn primary" id="endButton">End Game</button>
     </div>
     <div class="modal">
-      <p>Your score was: <span id="scoreDisplay"></span></p>
+      <p>Your score was: <span id="finalScore"></span></p>
     </div>
   </form>
   <script src="main.js"></script>
