--- a/week_5/speed_game/index.html
+++ b/week_5/speed_game/index.html
@@ -29,6 +29,7 @@
     </div>
     <div class="modal">
       <p>Your score was: <span id="finalScore"></span></p>
+      <button class= "btn close" id="close">X</button>
     </div>
   </form>
   <script src="main.js"></script>
