--- a/week_5/speed_game/index.html
+++ b/week_5/speed_game/index.html
@@ -30,6 +30,7 @@
     <div class="overlay">
     <div class="modal">
       <p>Your score was: <span id="finalScore"></span></p>
+      <p id="message"></p>
       <div id="close">
       <button class= "btn close" id="close">Play again</button>
       </div>
