--- a/week_5/speed_game/index.html
+++ b/week_5/speed_game/index.html
@@ -24,12 +24,13 @@
       
     </section>
     <div id="gameButtons">
-      <button class="btn" id="startButton">Start Game</button>
-      <button class="btn" id="endButton">End Game</button>
+      <button class="btn start" id="startButton">Start Game</button>
+      <button class="btn last" id="endButton">End Game</button>
     </div>
     <div class="overlay">
     <div class="modal">
-      <p>Your score was: <span id="finalScore"></span></p>
+      <h2>Game over!</h2>
+      <p>You scored <span id="finalScore"></span></p>
       <p id="message"></p>
       <div id="close">
       <button class= "btn close" id="close">Play again</button>
