--- a/week_5/speed_game/index.html
+++ b/week_5/speed_game/index.html
@@ -15,7 +15,8 @@
 <body>
   <form>
     <h1>SPEED GAME!</h1>
-    <p>Score:<span id="scoreDisplay"></span></p>
+    <h2>How fast can you go and still dodge asteroids?</h2>
+    <p>Current speed:<span id="scoreDisplay"></span></p>
     <section id="circles">
       <button class="circle" id="circle1"></button> 
       <button class="circle" id="circle2"></button> 
@@ -30,7 +31,7 @@
     <div class="overlay">
     <div class="modal">
       <h2>Game over!</h2>
-      <p>You scored <span id="finalScore"></span></p>
+      <p>Your speed was <span id="finalScore"></span>km/h before crashing.</p>
       <p id="message"></p>
       <div id="close">
       <button class= "btn close" id="close">Play again</button>
