--- a/week_5/speed_game/index.html
+++ b/week_5/speed_game/index.html
@@ -16,6 +16,7 @@
   <form>
     <h1>SPEED GAME!</h1>
     <h2>How fast can you go and still dodge asteroids?</h2>
+    <h3>Click the empty circle to dodge!</h3>
     <p>Current speed:<span id="scoreDisplay"></span></p>
     <section id="circles">
       <button class="circle" id="circle1"></button> 
@@ -31,7 +32,7 @@
     <div class="overlay">
     <div class="modal">
       <h2>Game over!</h2>
-      <p>Your speed was <span id="finalScore"></span>km/h before crashing.</p>
+      <p><span id="finalScore"></span></p>
       <p id="message"></p>
       <div id="close">
       <button class= "btn close" id="close">Play again</button>
