--- a/week_5/speed_game/index.html
+++ b/week_5/speed_game/index.html
@@ -13,9 +13,10 @@
 </head>
 
 <body>
+  <div id="layer">
   <form>
     <h1>SPEED GAME!</h1>
-    <h2>How fast can you go and still dodge asteroids?</h2>
+    <h2>How fast can you go without crashing?</h2>
     <h3>Click the empty circle to dodge!</h3>
     <p>Current speed:<span id="scoreDisplay"></span></p>
     <section id="circles">
@@ -39,8 +40,10 @@
       </div>
     </div>
     </div>
+    
   </form>
   <script src="main.js"></script>
+  </div>
 </body>
 
 </html>
