--- a/week_5/speed_game/index.html
+++ b/week_5/speed_game/index.html
@@ -15,7 +15,9 @@
 <body>
   <div id="layer">
   <form>
-    <h1>SPEED GAME!</h1>
+    <h1>
+    <!--   <button id="muteButton"></button> -->
+      SPEED GAME!</h1>
     <h2>How fast can you go without crashing?</h2>
     <h3>Click the empty circle to dodge!</h3>
     <p>Current speed:<span id="scoreDisplay"></span></p>
