--- a/week_7/Pokedex/index.html
+++ b/week_7/Pokedex/index.html
@@ -8,10 +8,48 @@
   <title>Pokedex</title>
 </head>
 <body>
+  <main>
   <h1>Pokedex</h1>
-    <section id="pokeCards">
-        <!-- <div class="pokeCard"><div class="pokeName"></div></div> -->
+  <div id="gens">
+  <button id="gen1">Generation 1</button>
+  <button id="gen2">Generation 2</button>
+  <button id="gen3">Generation 3</button>
+  <button id="gen4">Generation 4</button>
+  <button id="gen5">Generation 5</button>
+  <button id="gen6">Generation 6</button>
+  <button id="gen7">Generation 7</button>
+  <button id="gen8">Generation 8</button>
+  <button id="gen9">Generation 9</button>
+  </div>
+  <h2 id="introTitle">Select which generation of Pokémon you want to see!</h2>
+  <h2 id="genTitle"></h2>
+  <input type="text" id="search" placeholder="Search for pokemons">
+  <div class="dropdown">
+    <button class="dropbtn">Filter by type</button>
+    <div class="dropdown-content">
+      <a href="#">Normal</a>
+      <a href="#">Fire</a>
+      <a href="#">Water</a>
+      <a href="#">Grass</a>
+      <a href="#">Electric</a>
+      <a href="#">Ice</a>
+      <a href="#">Fighting</a>
+      <a href="#">Poison</a>
+      <a href="#">Ground</a>
+      <a href="#">Flying</a>
+      <a href="#">Psychic</a>
+      <a href="#">Bug</a>
+      <a href="#">Rock</a>
+      <a href="#">Ghost</a>
+      <a href="#">Dark</a>
+      <a href="#">Dragon</a>
+      <a href="#">Steel</a>
+      <a href="#">Fairy</a>
+    </div>
+  </div>
+  <section id="pokeCards">
     </section>
+  </main>
   <script src="main.js"></script>
 </body>
 </html>
